Fix bug toggle sub-menu on mobile

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -276,6 +276,8 @@ input#submit {
 	}
 
 	@media (max-width: @grid-float-breakpoint-max) {
+		background: none;
+
 		&:before {
 			display: none;
 		}
@@ -513,15 +515,18 @@ input#submit {
 		height: 40px;
 		text-align: center;
 		line-height: 40px;
-		.transition(all .1s linear);
+		.transition(all .1s);
+
+		&.open {
+			.rotate(90deg);
+		}
 	}
 
 	.sub-menu,
 	.children {
+		display: none;
 		overflow: hidden;
 		background: rgba(0,0,0,.1);
-		max-height: 0;
-		.transition(all .3s linear);
 
 		li:last-child {
 			border-bottom: none;
@@ -539,17 +544,6 @@ input#submit {
 			.children {
 				background: rgba(0,0,0,.5);
 			}
-		}
-	}
-
-	li:hover {
-		> .sub-menu,
-		> .children {
-			max-height: 1000px;
-		}
-
-		> .fa {
-			.rotate(90deg);
 		}
 	}
 
